<resources>
    <string name="app_name">Product List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemName">Product Name</string>
    <string name="itemQuantity">35</string>
    <string name="itemPrice">250Rs</string>
    <string name="totalCost">250</string>
    <string name="totalCostTitle">Total Price</string>
    <string name="title">Add Product</string>
    <string name="etItem">Product Name</string>
    <string name="etQuantity">Quantity</string>
    <string name="etPrice">Price</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="desc">Description</string>
</resources>
