<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/linear_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etItem"
            android:textSize="30dp" />
        <EditText
            android:id="@+id/etItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etQuantity"
            android:inputType="number"
            android:textSize="30dp" />
        <EditText
            android:id="@+id/etItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPrice"
            android:inputType="number"
            android:textSize="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_edit"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="14dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>